syntax="proto3";
package testapp;

import "google/protobuf/timestamp.proto";

option java_package = "com.proto.testapp";
option java_multiple_files = true;

message Item{
    string name = 1;
    double price = 2;
}

message OrderRequest {
    string customerEmail = 1;
    repeated Item items = 2;
}


message Order {
    string id = 1;
    string customerId = 2;
    int32 status = 3;
    repeated Item items = 4;
    google.protobuf.Timestamp offsetDateTime = 5;
}

message OrderResponse{
    string orderId = 1;
    int32 status = 2;
}

message Customer {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
}




